--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <nav class="nav">
       <div class="logo">
-        <a href="#"><img src="../assets/img/Logo.png" alt="logo" /></a>
+        <a href="#"><img src="./assets/img/Logo.png" alt="logo" /></a>
       </div>
       <div class="menu d-none d-md-block">
         <ul class="main-menu">
@@ -64,7 +64,7 @@
         </div>
       </div>
       <div class="home-img d-none d-md-block">
-        <img src="../assets/img/wallet.png" alt="cartera" />
+        <img src="./assets/img/wallet.png" alt="cartera" />
       </div>
     </section>
 
@@ -116,7 +116,7 @@
           </div>
         </div>
         <div class="image d-none d-md-block">
-          <img src="../assets/img/chart.png" alt="chart" />
+          <img src="./assets/img/chart.png" alt="chart" />
         </div>
       </div>
     </section>
